--- a/package.json
+++ b/package.json
@@ -12,6 +12,6 @@
   "dependencies": {
     "express": "^4.15.3",
     "mongodb": "^2.2.27",
-    "request": "^2.81.0"
+    "request-promise": "^4.2.1"
   }
 }
